examples/test/testpolicy13411.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13411
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key47: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
      podSelector:
        matchLabels:
          key32: value11
          key18: value9
          key38: value15
